# MCP

./: .coveragerc  .deployment-checklist  .dockerignore  .dockerignore.hub  .env.apple  .env.backup.20251013_174003  .env.backup.20251023_091402  .env.bak  .env.docker  .env.example  .env.hostinger  .env.local  .env.prod  .env.production  .env.production.active  .env.production.bak2  .env.production.optimized  .env.production.secure  .env.production.template  .env.rag  .env.secure.template  .env.t4g  .env.test  .env.unified-production  .gitignore  .gitmodules  .pre-commit-config.yaml  .slugignore  ACTIONS_IMMEDIATES.md  ACTIVATION_COMPLETE.txt  ACTIVATION_QUICKSTART.md  ACTIVATION_ROTATION_LOGS.md  ACTIVATION_UPSTASH_HTTPS_GUIDE.md  ANALYSE_FINALE_18OCT2025.md  CHANGELOG_RAG_OPTIMIZATIONS.md  CHANGELOG_V2.md  CHANGEMENTS_MODELE_LEGER.md  CICD_IMPLEMENTATION_COMPLETE.md  CICD_QUICKSTART.md  COMMANDES_FINALES.sh  (+472 more)
--validate/: .env.template.secure
.cursor/: rules.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md
_SPECS/: Audit-implementations.md  LNBITS-EVOS.md  Lnbits-internal.md  Meilleures API LND données.csv  Module-enrichissement.md  PLAN-MVP-SUIVI.md  Plan-MVP.md  Plan-lnbits.md  Roadmap-Production-v1.0.md  V2.md  api-pour-daznode.md  finish-MVP.md  hosting.md  specifications_techniques_fonctionnelles.md
app/: Dockerfile  auth.py  db.py  main.py  models.py  production_api.py  requirements.txt
auth/: database.py  dependencies.py  jwt.py  lightning.py  models.py  routes.py  security.py  users_crud.py
collected_data/: metrics_comparison.csv  sparkseer_channel_recommendations.json  sparkseer_ln_summary_ts.json  sparkseer_outbound_liquidity_value.json  sparkseer_suggested_fees.json
config/: __init__.py  cloudflare_optimization.md  decision_thresholds.yaml  docker-compose.hostinger-local.yml  env.example  logrotate.conf  rag_config.py  redis_cache.conf
data/: .lnbits_auth_key
daznode-docs/: README.md
deployment_package/: COMMANDES_MANUELLES.md  DEPLOY_NOW.sh  EXECUTE_IMMEDIATEMENT.sh  INSTRUCTIONS_DEPLOYMENT.md  TEST_RAPPORTS_PRODUCTION.py  daily_app_health_report.py  daily_daznode_report.py  (+4 more)
docs/: README.md  (+44 more)
(+1159 files in other folders)
