[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp"
version = "0.1.0"
description = "MCP - MongoDB and Redis Integration for RAG"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "linkup-sdk>=0.2.4",
    "llama-index[cpu]>=0.12.25",
    "llama-index-embeddings-huggingface[cpu]>=0.5.2",
    "llama-index-llms-ollama[cpu]>=0.5.3",
    "mcp[cli]>=1.5.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.27.1",
    "fastapi>=0.110.0",
    "faiss-cpu>=1.7.4",
    "langchain-core>=0.1.31",
    "langchain-community>=0.0.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1"
]
