[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp"
version = "0.1.0"
description = "MCP - MongoDB and Redis Integration for RAG"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.5.0",
    "gunicorn==21.2.0",
    "uvicorn==0.27.1",
    "fastapi==0.110.0",
    "faiss-cpu==1.7.4",
    "langchain-core>=0.1.33,<0.2.0",
    "langchain-community==0.0.29",
    "openai==1.67.0",
    "tiktoken==0.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5"
]
