[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp"
version = "0.1.0"
description = "MCP - MongoDB and Redis Integration for RAG"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "linkup-sdk>=0.2.4",
    "llama-index[cpu]>=0.12.25",
    "llama-index-embeddings-huggingface[cpu]>=0.5.2",
    "mcp[cli]>=1.5.0",
    "gunicorn==23.0.0",
    "uvicorn==0.27.1",
    "fastapi>=0.109.1,<0.115.0",
    "pydantic-settings>=2.1.0",
    "langchain-core>=0.1.33,<0.2.0",
    "langchain-community==0.2.19",
    "openai==1.67.0",
    "tiktoken==0.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5"
]
